# python-project-management-cli

./: Pipfile  README.md  __init__.py  main.py  pyproject.toml
data/: database.json  projects.json
models/: __init__.py  person.py  project.py  task.py  user.py
project_manager/: cli.py
project_manager/models/: project.py  task.py  user.py
project_manager/services/: manager.py  storage.py
project_manager/utils/: __init__.py  validation.py
tests/: test_cli.py  test_cli_flow.py  test_email_validation.py  test_manager.py  test_manager_errors.py  test_project.py  test_storage.py  test_storage_edgecases.py  test_task.py  test_user.py
utils/: __init__.py  display.py  storage.py
